<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/plan_item"
                android:orientation="vertical">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_pdate"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/pdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_itnbr"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/itnbr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_itdsc"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/itdsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_pnum"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/pnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow
                android:id="@+id/tr_barcode_start"
                android:visibility="gone">
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_barcode_start"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/barcode_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow
                android:id="@+id/tr_barcode_end"
                android:visibility="gone">
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/vul_barcode_end"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/barcode_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
    </TableLayout>
        <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/scan_barcode"
                style="@style/ButtonView.Blue"
                android:text="扫描条码"
                android:layout_margin="20dp"
                android:visibility="gone"
                />
        <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/end_plan"
                style="@style/ButtonView.Blue"
                android:text="结束计划"
                android:layout_margin="20dp"
                android:visibility="gone"
                />
        <LinearLayout
                android:id="@+id/ll_scan"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" android:visibility="visible">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="15sp"
                    android:text="扫描方式:"
                    android:textAlignment="center"
                    android:layout_gravity="center"
            />
            <!-- spinnerMode 下拉框显示模式  dialog 弹窗模式 -->
            <Spinner
                    android:id="@+id/scan"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="15sp"
                    android:entries="@array/scan"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
            />
        </LinearLayout>
        <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/vul_start"
                style="@style/ButtonView.Blue"
                android:text="@string/vul_start"
                android:layout_margin="20dp"
                android:visibility="gone"
                />
        <com.xuexiang.xui.widget.button.ButtonView
                android:id="@+id/vul_end"
                style="@style/ButtonView.Gray"
                android:text="@string/vul_end"
                android:layout_margin="20dp"
                android:visibility="gone"/>

</LinearLayout>
