<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
>
    <!-- 标题 退厂扫描 -->
    <com.xuexiang.xui.widget.actionbar.TitleBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/xui_btn_blue_normal_color"
            app:tb_barHeight="40dp"
            app:tb_dividerColor="@color/xui_config_color_red"
            app:tb_titleText="@string/load_scanning">
    </com.xuexiang.xui.widget.actionbar.TitleBar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/code"
                android:textAlignment="center"
                android:textSize="15sp"/>
        <!-- 条件输入框 -->
        <com.xuexiang.xui.widget.edittext.ClearEditText
                style="@style/EditText.Normal"
                android:id="@+id/scan_barcode"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:hint="@string/vul_barcode_scan"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
        <!-- 搜索按钮 -->
        <com.xuexiang.xui.widget.button.ButtonView
                style="@style/ButtonView.Blue"
                android:id="@+id/bt_getCode"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="确定"
                android:layout_margin="5dp" android:visibility="visible"/>
    </LinearLayout>
    <View
            android:layout_height="1px"
            android:layout_width="350dp"
            android:layout_marginLeft="10dp"
            android:background="@color/black_textview"
            android:id="@+id/view"/>
    <LinearLayout
            android:id="@+id/ll_codelog"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" android:visibility="visible">
        <!-- 条码扫描框 -->
        <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="-10dp"
                android:layout_marginLeft="5dp"
                android:text="记录"
                android:textAlignment="center"
                android:textSize="15sp"/>
        <TextView
                android:background="@drawable/edit_background"
                android:id="@+id/barcode_log"
                android:layout_width="270dp"
                android:layout_marginTop="30dp"
                android:layout_height="250dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_marginLeft="-40dp"/>
        <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="-50dp"
                android:text="0"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="30sp"
                android:id="@+id/anum"
                android:visibility="visible"/>
    </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>