<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
>
    <!-- 标题 条码更换 -->
    <com.xuexiang.xui.widget.actionbar.TitleBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/xui_btn_blue_normal_color"
            app:tb_barHeight="40dp"
            app:tb_dividerColor="@color/xui_config_color_red"
            app:tb_titleText="@string/vul_barcode_replace">
    </com.xuexiang.xui.widget.actionbar.TitleBar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="原条码："
                android:textAlignment="center"
                android:textSize="15sp"/>
        <!-- 条码扫描框 -->
        <com.xuexiang.xui.widget.edittext.ClearEditText
                style="@style/EditText.Normal"
                android:id="@+id/barcode"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:hint="@string/old_barcode_scan"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
        <!-- 搜索按钮 -->
        <com.xuexiang.xui.widget.button.ButtonView
                style="@style/ButtonView.Blue"
                android:id="@+id/bt_getCode"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/search"
                android:layout_marginTop="5dp"/>
    </LinearLayout>
    <!-- 条码明细显示 -->
    <View
            android:layout_height="1px"
            android:layout_width="350dp"
            android:layout_marginLeft="30dp"
            android:background="@color/black_textview"
            android:id="@+id/view1"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="241dp">
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="日期"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/product_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="规格"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/spesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="规格名称"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/spescname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="LorR"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/LorR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="班次"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/shift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="班组"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="主手"
                    android:textSize="15sp"/>
            <TextView
                    android:id="@+id/creatuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15sp"/>
        </TableRow>
    </TableLayout>
    <View
            android:layout_height="1px"
            android:layout_width="350dp"
            android:layout_marginLeft="30dp"
            android:background="@color/black_textview"
            android:id="@+id/view2"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <!-- 条码扫描框 -->
        <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="新条码："
                android:textAlignment="center"
                android:textSize="15sp"/>
        <com.xuexiang.xui.widget.edittext.ClearEditText
                style="@style/EditText.Normal"
                android:id="@+id/new_barcode"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:hint="@string/new_barcode_scan"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
        <!-- 搜索按钮 -->
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_scan_out_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:visibility="visible">

        <com.xuexiang.xui.widget.button.ButtonView
                style="@style/ButtonView.Blue"
                android:id="@+id/barcode_replace"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/replace"
                android:layout_marginLeft="90dp"
                android:visibility="visible"/>
    </LinearLayout>
</LinearLayout>